Fixed the scrollTrigger issue on mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -20,6 +20,7 @@
   align-items: center;
   line-height: 1;
   height: 75px;
+  overflow: hidden;
 }
 
 .hero__title {
@@ -61,6 +62,7 @@
   opacity: .5;
   font-size: 14px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 600px) {
